[package]
name = "sc2remap"
version = "0.1.0"
authors = ["tone <tony.y.gong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"argh" = "0.1"
"evdev-rs" = "0.5"
"evdev-utils" = { git = "https://github.com/ttttcrngyblflpp/evdev-utils", branch = "main" }
"futures" = "0.3"
"glob" = "0.3"
"libc" = "0.2"
"log" = "0.4"
"pidlock" = "0.1"
"simple_logger" = "1.16"
